Set `overflow-y` to `scroll` to avoid reflow
Setting `overflow-y: scroll` to prevent reflow as soon as content
comes in. Adding it to `body` as there might be side-effects when
it's set on both, `html` and `body` and latter seems to be the
place where volunteers or third parties would have set it already.

Bug: T204084

--- a/resources/skins.minerva.content.styles/main.less
+++ b/resources/skins.minerva.content.styles/main.less
@@ -16,6 +16,7 @@ body {
 	font-size: @font-size-body;
 	line-height: 1.4;
 	-webkit-tap-highlight-color: rgba( 0, 0, 0, 0.2 );
+	overflow-y: scroll;
 }
 
 .content {
